# tlux

./: .gitignore  CMakeLists.txt  README.md  oldlonecoder.txt  scripter.cmake  tlux.cmake  tlux.sln  tlux.vcxproj  tlux.vcxproj.filters  tuxic.cmake  tuxls.cmake  tuxls.sln  tuxls.vcxproj  tuxls.vcxproj.filters
include/tlux/: application.h  argc.h  cc_arg.h  delegate.h  diagnostic.h  dlconf.h  expect.h  geometry.h  object.h  stracc.h  strbrk.h  textattr.h  tux_signal.h
include/tlux/db/: database.h  field.h  query.h  table.h
include/tlux/stml/: text.h
include/tlux/utf/: Icons.h  accents.fr.h
include/tuxic/: application.h  diagnostic.h  geometry.h  object.h  stracc.h  strbrk.h  textattr.h  tux_signal.h
include/tuxic/cnt/: tux_array.h
include/tuxic/db/: database.h  field.h  query.h  table.h
include/tuxic/stml/: text.h
include/tuxic/utf/: Icons.h
include/tuxls/: application.h  argc.h  diagnostic.h  dlconf.h  expect.h  geometry.h  object.h  signals.h  stracc.h  strbrk.h  textattr.h
include/tuxls/db/: database.h  field.h  query.h  table.h
src/: application.cc  argc.cc  cc_arg.cc  diagnostic.cc  expect.cc  geometry.cc  object.cc  stracc.cc  strbrk.cc  textattr.cc
src/db/: database.cc  field.cc  query.cc  table.cc
src/stml/: text.cc
src/utf/: Icons.cc  accents.fr.cc
tests/: CMakeLists.txt  test.cc  test.h  test.vcxproj  test.vcxproj.filters  tlux.app.cc  tlux.stracc.cc  tlux_database.cc  tlux_master.cc
tests.devel/: CMakeLists.txt  tlux.app.cc  tlux_database.cc  tlux_database.cmake  tlux_diagnostic.cc  tlux_diagnostic.cmake  tlux_master.cc
(+3 files in other folders)
